<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="12dp" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_question"
        android:textSize="20sp"
        android:paddingTop="16dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_answer"
        android:textSize="18sp"
        android:visibility="gone"
        android:paddingBottom="18dp" />

    <Button
        android:id="@+id/btnToggleAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_answer" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_card"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_card"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_card"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_card"
        android:layout_marginTop="10dp" />

</LinearLayout>
